--- a/client/static/index.html
+++ b/client/static/index.html
@@ -16,9 +16,13 @@
         <script src="/scripts/riot/riot.min.js"></script>
         <script src="/scripts/riot-route/dist/route.js"></script>
 
+        <!-- qrcode-generator tags -->
+        <script type="text/javascript" src="/scripts/qrcode-generator/qrcode.js"></script>
+
         <!-- custom tags -->
         <script src="/dist/bundle.js"></script>
 
+        
         <script>
             window.onload = () => {
       console.log('index mounted')
