--- a/client/static/index.html
+++ b/client/static/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Job Hunt Japan</title>
+        <title>Voila | QR Code check in</title>
 
     </head>
     <body>
